// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Copyright components:  ChildGrid:  should match the snapshot  1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root components__ChildGrid-sc-12mz8xb-2 jrDFRX"
  />
</DocumentFragment>
`;

exports[`Copyright components:  CopyrightText:  should match the snapshot  1`] = `
<DocumentFragment>
  <h3
    class="MuiTypography-root components__CopyrightText-sc-12mz8xb-0 jDvqEB MuiTypography-body1"
  />
</DocumentFragment>
`;

exports[`Copyright components:  DeviceToggleLink:  should match the snapshot  1`] = `
<DocumentFragment>
  <a
    class="components__DeviceToggleLink-sc-12mz8xb-3 cbjhUi"
  />
</DocumentFragment>
`;

exports[`Copyright components:  GridContainer:  should match the snapshot  1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root components__GridContainer-sc-12mz8xb-1 iQBAM"
  />
</DocumentFragment>
`;
